--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AhmedRamadan009.github.io/noax",
+  "homepage": "https://noax-ahmedramadan009.vercel.app/",
   "name": "afalmak",
   "version": "0.1.0",
   "private": true,
