--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "formik": "^2.4.5",
     "joi": "^17.6.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
-    "node-sass": "6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "predeploy": "npm run build",
